[package]
name = "hulk"
version = "0.1.0"
edition = "2024"

[dependencies]
apply = "0.3.0"
clap = { version = "4.5.54", features = ["derive"] }
memfd = "0.6.5"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
wayland-client = { version = "0.31.12"}
wayland-protocols = { version = "0.32.10", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.10", features = ["client"] }
